--- a/library.html
+++ b/library.html
@@ -147,5 +147,76 @@
       renderLibrary();
     });
   </script>
+<!-- Navigation Button -->
+<div class="mb-6">
+  <a href="home.html" class="btn">Go to Home</a>
+</div>
+
+<script>
+  // Add thumbnail upload button to each template card
+  function addThumbnailUploadOption(card, index) {
+    const thumbInput = document.createElement('input');
+    thumbInput.type = 'file';
+    thumbInput.accept = 'image/*';
+    thumbInput.className = 'hidden';
+    thumbInput.onchange = (e) => {
+      const file = e.target.files[0];
+      if (!file) return;
+      const reader = new FileReader();
+      reader.onload = (ev) => {
+        library[index].thumbnail = ev.target.result;
+        localStorage.setItem('sitegenLibrary', JSON.stringify(library));
+        renderLibrary(); // refresh view
+      };
+      reader.readAsDataURL(file);
+    };
+
+    const labelBtn = document.createElement('button');
+    labelBtn.textContent = 'Upload Thumbnail';
+    labelBtn.className = 'btn mt-2';
+    labelBtn.onclick = () => thumbInput.click();
+
+    card.appendChild(thumbInput);
+    card.appendChild(labelBtn);
+  }
+
+  // Update renderLibrary to include thumbnail uploader
+  const originalRender = renderLibrary;
+  renderLibrary = function () {
+    libraryGrid.innerHTML = '';
+    library.forEach((item, index) => {
+      if (item.type === 'template') {
+        const card = document.createElement('div');
+        card.className = "border p-2 rounded shadow";
+
+        const img = document.createElement('img');
+        img.src = item.thumbnail || 'https://via.placeholder.com/400x200?text=No+Thumbnail';
+        img.className = "card-img mb-2";
+        card.appendChild(img);
+
+        const name = document.createElement('p');
+        name.textContent = item.name;
+        name.className = "font-semibold mb-2";
+        card.appendChild(name);
+
+        const editBtn = document.createElement('button');
+        editBtn.textContent = 'Edit Thumbnail';
+        editBtn.className = 'btn';
+        editBtn.onclick = () => openThumbnailEditor(index);
+        card.appendChild(editBtn);
+
+        // Add Upload Thumbnail option
+        addThumbnailUploadOption(card, index);
+
+        libraryGrid.appendChild(card);
+      }
+    });
+  };
+
+  // Ensure persistence
+  localStorage.setItem('sitegenLibrary', JSON.stringify(library));
+  renderLibrary();
+</script>
+
 </body>
 </html>
