--- a/index.html
+++ b/index.html
@@ -2,77 +2,66 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Sitegen — Home</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home - Template Library</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
-    body { font-family: sans-serif; margin: 0; background: #fff; color: #000; }
-    header { padding: 1rem 2rem; border-bottom: 1px solid #ccc; display: flex; justify-content: space-between; align-items: center; }
-    h1 { margin: 0; font-size: 1.5rem; }
-    button { background: #000; color: #fff; border: none; border-radius: .5rem; padding: .5rem 1rem; cursor: pointer; }
-    button:hover { opacity: 0.8; }
-    .container { padding: 2rem; display: grid; grid-template-columns: repeat(auto-fill, minmax(240px, 1fr)); gap: 1.5rem; }
-    .card { border: 1px solid #ddd; border-radius: 1rem; overflow: hidden; background: #fff; display: flex; flex-direction: column; }
-    .card img { width: 100%; height: 160px; object-fit: cover; background: #f0f0f0; }
-    .card .info { padding: 1rem; flex: 1; display: flex; flex-direction: column; }
-    .card h3 { margin: 0 0 .5rem 0; font-size: 1.1rem; }
-    .card p { margin: 0; flex: 1; font-size: .9rem; color: #555; }
-    .card button { margin-top: 1rem; }
-    .empty { text-align: center; color: #777; margin-top: 4rem; }
+    body { background: #fff; color: #000; }
+    .card { 
+      border-radius: 0.75rem; 
+      overflow: hidden; 
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1); 
+      transition: transform 0.2s ease;
+      cursor: pointer;
+    }
+    .card:hover { transform: scale(1.02); }
+    .card-img { width: 100%; height: 200px; object-fit: cover; }
   </style>
 </head>
-<body>
-  <header>
-    <h1>Sitegen</h1>
-    <a href="library.html"><button>Library</button></a>
-  </header>
+<body class="p-6">
 
-  <main>
-    <div class="container" id="templatesContainer"></div>
-    <div class="empty" id="emptyMessage" style="display:none;">No templates available yet. Add some from Library.</div>
-  </main>
+  <!-- Header -->
+  <div class="flex justify-between items-center mb-6">
+    <h1 class="text-3xl font-bold">Home</h1>
+    <a href="library.html" class="bg-black text-white px-4 py-2 rounded shadow hover:opacity-80">Go to Library</a>
+  </div>
+
+  <!-- Templates Grid -->
+  <div id="templatesGrid" class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-3 gap-6"></div>
 
   <script>
-    const container = document.getElementById("templatesContainer");
-    const emptyMsg = document.getElementById("emptyMessage");
+    window.addEventListener('DOMContentLoaded', () => {
+      const templatesGrid = document.getElementById('templatesGrid');
+      const library = JSON.parse(localStorage.getItem('sitegenLibrary') || '[]');
 
-    function loadTemplates() {
-      const data = JSON.parse(localStorage.getItem("sitegen_library") || "{}");
-      const templates = (data.templates || []);
-      container.innerHTML = "";
+      function renderTemplates() {
+        templatesGrid.innerHTML = '';
+        library.forEach((item, index) => {
+          if(item.type === 'template'){
+            const card = document.createElement('div');
+            card.className = "card";
+            card.onclick = () => {
+              // Go to Wizard Maker with template ID
+              window.location.href = `wizard.html?id=${index}`;
+            };
 
-      if (templates.length === 0) {
-        emptyMsg.style.display = "block";
-        return;
+            const img = document.createElement('img');
+            img.src = item.thumbnail || 'https://via.placeholder.com/600x300?text=No+Thumbnail';
+            img.className = "card-img";
+            card.appendChild(img);
+
+            const name = document.createElement('div');
+            name.textContent = item.name;
+            name.className = "p-3 font-semibold text-center";
+            card.appendChild(name);
+
+            templatesGrid.appendChild(card);
+          }
+        });
       }
-      emptyMsg.style.display = "none";
 
-      templates.forEach((tpl, index) => {
-        const card = document.createElement("div");
-        card.className = "card";
-
-        const img = document.createElement("img");
-        img.src = tpl.thumbnail || "https://via.placeholder.com/300x160?text=Template";
-        card.appendChild(img);
-
-        const info = document.createElement("div");
-        info.className = "info";
-        info.innerHTML = `
-          <h3>${tpl.name || "Untitled Template"}</h3>
-          <p>${tpl.description || "No description"}</p>
-        `;
-        const btn = document.createElement("button");
-        btn.textContent = "Edit Template";
-        btn.onclick = () => {
-          localStorage.setItem("sitegen_active_template", JSON.stringify(tpl));
-          window.location.href = "wizard-maker.html";
-        };
-
-        info.appendChild(btn);
-        card.appendChild(info);
-        container.appendChild(card);
-      });
-    }
-
-    loadTemplates();
+      renderTemplates();
+    });
   </script>
 </body>
 </html>
