--- a/library.html
+++ b/library.html
@@ -18,7 +18,7 @@
 
   <!-- Navigation Button -->
   <div class="mb-6">
-    <a href="home.html" class="btn">Go to Home</a>
+    <a href="index.html" class="btn">Go to Home</a>
   </div>
 
   <!-- Upload Section -->
