--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <!-- Header -->
   <div class="flex justify-between items-center mb-6">
-    <h1 class="text-3xl font-bold">Home</h1>
+    <h1 class="text-3xl font-bold">Sitegen</h1>
     <a href="library.html" class="bg-black text-white px-4 py-2 rounded shadow hover:opacity-80">Go to Library</a>
   </div>
 
