--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             card.className = "card";
             card.onclick = () => {
               // Go to Wizard Maker with template ID
-              window.location.href = `wizard.html?id=${index}`;
+              window.location.href = `wizardmaker.html?id=${index}`;
             };
 
             const img = document.createElement('img');
