--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home - Template Library</title>
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Tailwind -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+
   <style>
     body { background: #fff; color: #000; }
     .card { 
@@ -15,14 +21,14 @@
       cursor: pointer;
     }
     .card:hover { transform: scale(1.02); }
-    .card-img { width: 100%; height: 200px; object-fit: cover; }
+    .card-img { width: 100%; height: 220px; object-fit: cover; }
   </style>
 </head>
 <body class="p-6">
 
   <!-- Header -->
   <div class="flex justify-between items-center mb-6">
-    <h1 class="text-3xl font-bold">Sitegen</h1>
+    <h1 class="text-3xl font-bold">Home</h1>
     <a href="library.html" class="bg-black text-white px-4 py-2 rounded shadow hover:opacity-80">Go to Library</a>
   </div>
 
