--- a/index.html
+++ b/index.html
@@ -3,71 +3,60 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home - Template Library</title>
-
-  <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-
-  <!-- Tailwind -->
+  <title>Home - Templates</title>
+  <link rel="icon" type="image/png" href="favicon.png">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-
   <style>
     body { background: #fff; color: #000; }
-    .card { 
-      border-radius: 0.75rem; 
-      overflow: hidden; 
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1); 
-      transition: transform 0.2s ease;
-      cursor: pointer;
-    }
+    .card { cursor: pointer; transition: transform 0.2s; }
     .card:hover { transform: scale(1.02); }
-    .card-img { width: 100%; height: 220px; object-fit: cover; }
+    .card-img { width: 100%; height: 200px; object-fit: cover; border-radius: 0.5rem 0.5rem 0 0; }
   </style>
 </head>
 <body class="p-6">
 
-  <!-- Header -->
-  <div class="flex justify-between items-center mb-6">
-    <h1 class="text-3xl font-bold">Home</h1>
-    <a href="library.html" class="bg-black text-white px-4 py-2 rounded shadow hover:opacity-80">Go to Library</a>
-  </div>
+  <h1 class="text-3xl font-bold mb-6">Template Library</h1>
 
-  <!-- Templates Grid -->
-  <div id="templatesGrid" class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-3 gap-6"></div>
+  <!-- Grid for Templates -->
+  <div id="templateGrid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"></div>
 
   <script>
-    window.addEventListener('DOMContentLoaded', () => {
-      const templatesGrid = document.getElementById('templatesGrid');
-      const library = JSON.parse(localStorage.getItem('sitegenLibrary') || '[]');
+    // Load library from localStorage
+    const library = JSON.parse(localStorage.getItem('sitegenLibrary') || '[]');
+    const templateGrid = document.getElementById('templateGrid');
 
-      function renderTemplates() {
-        templatesGrid.innerHTML = '';
-        library.forEach((item, index) => {
-          if(item.type === 'template'){
-            const card = document.createElement('div');
-            card.className = "card";
-            card.onclick = () => {
-              // Go to Wizard Maker with template ID
-              window.location.href = `wizardmaker.html?id=${index}`;
-            };
+    function renderTemplates() {
+      templateGrid.innerHTML = '';
+      library.forEach((item, index) => {
+        if (item.type === 'template') {
+          const card = document.createElement('div');
+          card.className = "border rounded shadow overflow-hidden card";
+          
+          // Make it clickable -> open in wizardmaker
+          card.onclick = () => {
+            // Encode the content (zip as base64) so wizardmaker can read
+            const templateData = encodeURIComponent(item.content);
+            window.location.href = `wizardmaker.html?template=${templateData}`;
+          };
 
-            const img = document.createElement('img');
-            img.src = item.thumbnail || 'https://via.placeholder.com/600x300?text=No+Thumbnail';
-            img.className = "card-img";
-            card.appendChild(img);
+          // Thumbnail
+          const img = document.createElement('img');
+          img.src = item.thumbnail || 'https://via.placeholder.com/400x200?text=No+Thumbnail';
+          img.className = "card-img";
+          card.appendChild(img);
 
-            const name = document.createElement('div');
-            name.textContent = item.name;
-            name.className = "p-3 font-semibold text-center";
-            card.appendChild(name);
+          // Name
+          const name = document.createElement('div');
+          name.textContent = item.name;
+          name.className = "p-2 font-semibold text-center";
+          card.appendChild(name);
 
-            templatesGrid.appendChild(card);
-          }
-        });
-      }
+          templateGrid.appendChild(card);
+        }
+      });
+    }
 
-      renderTemplates();
-    });
+    renderTemplates();
   </script>
 </body>
 </html>
