--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home - Templates</title>
+  <title>Home - Sitegen</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="icon" type="image/png" href="https://www.favicon.cc/logo3d/147380.png">
   <style>
@@ -14,8 +14,10 @@
 </head>
 <body class="p-6">
 
-  <h1 class="text-3xl font-bold mb-6">Available Templates</h1>
-
+  <h1 class="text-3xl font-bold mb-6">Sitegen</h1>
+<a href="library.html" class="btn bg-black text-white px-4 py-2 rounded shadow hover:opacity-80">
+    Go to Library
+  </a>
   <!-- Templates Grid -->
   <div id="libraryGrid" class="grid grid-cols-1 md:grid-cols-3 gap-6"></div>
 
