--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body class="p-6">
 
   <h1 class="text-3xl font-bold mb-6">Sitegen</h1>
-<a href="library.html" class="btn bg-black text-white px-4 py-2 rounded shadow hover:opacity-80">
-    Go to Library
-  </a>
+<div class="right-align">
+  <a href="library.html" class="btn">Go to Library</a>
+</div>
   <!-- Templates Grid -->
   <div id="libraryGrid" class="grid grid-cols-1 md:grid-cols-3 gap-6"></div>
 
