--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
 </head>
 <body class="p-6">
 
-  <h1 class="text-3xl font-bold mb-6">Sitegen</h1>
-<div class="right-align">
-  <a href="library.html" class="btn">Go to Library</a>
+  <!-- Header -->
+<div class="flex justify-between items-center mb-6">
+  <h1 class="text-3xl font-bold">Sitegen</h1>
+  <a href="library.html" class="px-4 py-2 bg-black text-white rounded-lg shadow hover:opacity-80">
+    Go to Library
+  </a>
 </div>
+
   <!-- Templates Grid -->
   <div id="libraryGrid" class="grid grid-cols-1 md:grid-cols-3 gap-6"></div>
 
