--- a/library.html
+++ b/library.html
@@ -17,7 +17,7 @@
   <h1 class="text-3xl font-bold mb-4">Library</h1>
 
   <!-- Navigation Button -->
-  <div class="mb-6">
+  <div class="flex justify-end">
     <a href="index.html" class="btn">Go to Home</a>
   </div>
 
